--- a/index.html
+++ b/index.html
@@ -324,6 +324,7 @@
     <script src="js/engine.js"></script>
     <script src="js/index.js"></script>
     <!-- <script>javascript: (async () => { const scriptText = await (await fetch('https://raw.githubusercontent.com/kgurchiek/n-gon-controller/main/main.js')).text(); var script = document.createElement('script'); script.type = 'text/javascript'; script.textContent = scriptText; document.head.appendChild(script); })();</script> -->
+    <script src="js/mod.js"></script>
 </body>
 
 </html>
